2002-10-22  Chris Blumenberg  <cblu@apple.com>

	- Moved things around to make room for new plug-in API.
	- Renamed WebNetscapePlugin to WebNetscapePluginPackage.
	- Renamed WebNetscapePluginDatabase to WebPluginDatabase.

        * Plugins.subproj/WebBaseNetscapePluginStream.m:
        (-[WebBaseNetscapePluginStream setPluginPointer:]):
        * Plugins.subproj/WebBaseNetscapePluginView.h:
        * Plugins.subproj/WebBaseNetscapePluginView.m:
        (-[WebBaseNetscapePluginView plugin]):
        * Plugins.subproj/WebNetscapePluginDocumentView.m:
        (-[WebNetscapePluginDocumentView setDataSource:]):
        * Plugins.subproj/WebNetscapePluginEmbeddedView.h:
        * Plugins.subproj/WebNetscapePluginEmbeddedView.m:
        (-[WebNetscapePluginEmbeddedView initWithFrame:plugin:URL:baseURL:mime:arguments:]):
        * Plugins.subproj/WebNetscapePluginNullEventSender.h: Added.
        * Plugins.subproj/WebNetscapePluginNullEventSender.m: Added.
        (-[WebNetscapePluginNullEventSender initWithPluginView:]):
        (-[WebNetscapePluginNullEventSender dealloc]):
        (-[WebNetscapePluginNullEventSender sendNullEvents]):
        (-[WebNetscapePluginNullEventSender stop]):
        * Plugins.subproj/WebNetscapePluginPackage.h: Added.
        * Plugins.subproj/WebNetscapePluginPackage.m: Added.
        (-[WebNetscapePluginPackage openResourceFile]):
        (-[WebNetscapePluginPackage closeResourceFile:]):
        (-[WebNetscapePluginPackage stringForStringListID:andIndex:]):
        (-[WebNetscapePluginPackage getPluginInfo]):
        (-[WebNetscapePluginPackage stringByResolvingSymlinksAndAliasesInPath:]):
        (-[WebNetscapePluginPackage initWithPath:]):
        (-[WebNetscapePluginPackage load]):
        (-[WebNetscapePluginPackage unload]):
        (-[WebNetscapePluginPackage NPP_SetWindow]):
        (-[WebNetscapePluginPackage NPP_New]):
        (-[WebNetscapePluginPackage NPP_Destroy]):
        (-[WebNetscapePluginPackage NPP_NewStream]):